--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
+        
+    - name: Change working directory
+      run: cd smartline-mobile-app
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
