--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,9 +20,8 @@ jobs:
         distribution: 'temurin'
         cache: gradle
         
-    - name: Change working directory
-      run: cd smartline-mobile-app
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: |
+        cd smartline-mobile-app 
+        chmod +x gradlew
+        ./gradlew build
