--- a/smartline-mobile-app/iosApp/iosApp/Info.plist
+++ b/smartline-mobile-app/iosApp/iosApp/Info.plist
@@ -46,5 +46,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<array>
+        <key>CFBundleLocalizations</key>
+        <array>
+            <string>en</string>
+            <string>ar</string>
+        </array>
+    </array>
 </dict>
 </plist>
