--- a/smartline-mobile-app/gradle/libs.versions.toml
+++ b/smartline-mobile-app/gradle/libs.versions.toml
@@ -16,8 +16,11 @@ junit = "4.13.2"
 kotlin = "2.0.21"
 kotlinxSerializationJson = "1.6.1"
 ktorClientAndroid = "2.3.2"
+lottieCompose = "6.0.0"
 material = "1.7.0"
 material3Lint = "1.4.0-alpha04"
+multiplatformSettings = "1.2.0"
+multiplatformSettingsNoArg = "1.2.0"
 runtime = "1.7.0"
 
 [libraries]
@@ -40,7 +43,10 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientAndroid" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktorClientAndroid" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorClientAndroid" }
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 material = { module = "org.jetbrains.compose.material:material", version.ref = "material" }
+multiplatform-settings-no-arg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "multiplatformSettingsNoArg" }
+multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "runtime" }
 
 [plugins]
